--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 #
 # Add environment-specific variables on new lines in the form of NAME=VALUE
 # 
-REACT_APP_API_KEY=1mUInG5a5iY0mPpDj4RevFwsvTjOufiJ
+REACT_APP_API_KEY={YOUR_API_KEY}
